chore(api): adding getById endpoint, that uses cache (#14)
* Added getById endpoint, that uses cache

* Update package.json

* Updating Pokeshop with caching cases
